force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/cgcloud__Job_Definition_List_Template__c.object-meta.xml
<CustomObject>
    <description>Template that controls the behavior of job definition lists.</description>
    <label>Activity Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>