force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Classification__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non_Standard</fullName>
                <label>Non Standard</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard_with_Customer</fullName>
                <label>Standard with Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>