force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Consider_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Customer</label>
    <type>Checkbox</type>
</CustomField>