force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Consider_History__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the default configuration for considering historical products during activity creation.</description>
    <label>Consider History</label>
    <type>Checkbox</type>
</CustomField>