force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Consider_Products__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the default configuration for individual addition of products to the activity.</description>
    <label>Consider Products</label>
    <type>Checkbox</type>
</CustomField>