force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Default_Management_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Management_Type__c</fullName>
    <description>Specifies the default management type that will be considered in the user determination when creating job lists out of non-standard activity.</description>
    <label>Default Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>