force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Display_In_Cockpit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_In_Cockpit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display in Cockpit</label>
    <type>Checkbox</type>
</CustomField>