force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Duration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Duration__c</fullName>
    <description>Defines the default duration when creating an activity (measured in weeks).</description>
    <inlineHelpText>Duration is measured in weeks.</inlineHelpText>
    <label>Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>