force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Specifies the sort value of activity template.</description>
    <inlineHelpText>Defines the sort value of activity template</inlineHelpText>
    <label>Sort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>