force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__Standard_Jobs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Standard_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Jobs</label>
    <type>Checkbox</type>
</CustomField>