force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/fields/cgcloud__User_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Policy__c</fullName>
    <description>Controls the determination of valid users, when the activity is activated. The attribute controls the valid users by interpreting main management relation between user and Customer.</description>
    <label>User Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>OnlyMain</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>