force-app/main/default/objects/cgcloud__Job_Definition_List_Template__c/validationRules/cgcloud__Prevent_Changing_of_Standard_Jobs.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_Changing_of_Standard_Jobs</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(cgcloud__Standard_Jobs__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Standard_Jobs__c</errorDisplayField>
    <errorMessage>The Standard Jobs can&apos;t be edited after Activity Template creation.</errorMessage>
</ValidationRule>